--- a/Hoja de vida/Hoja de vida.html
+++ b/Hoja de vida/Hoja de vida.html
@@ -18,7 +18,7 @@
 </head>
 <body bgcolor=#F5F6CE>
         <b><i>
-                <center><h1><strong><A name="HOJA">HOJA DE VIDA</A></strong></H1><HR>
+                <center><h1><strong><A name="HOJA">HOJA DE VIDA Diana</A></strong></H1><HR>
                 </center><BR><BR><BR>
                 <center> <img src="imagenes/diana.png"/border=3  width="200" ><BR><BR><BR><BR><BR><BR>
                 <UL class="Style" >
